; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_VirtualPolling.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_VirtualPolling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VirtualPolling(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %21

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @PollingDhcpServer(i32* %7)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @PoolingNat(i32* %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @PollingArpTable(i32* %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @PollingArpWaitTable(i32* %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @PollingIpWaitTable(i32* %15)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @PollingIpCombine(i32* %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @PollingBeacon(i32* %19)
  br label %21

21:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @PollingDhcpServer(i32*) #1

declare dso_local i32 @PoolingNat(i32*) #1

declare dso_local i32 @PollingArpTable(i32*) #1

declare dso_local i32 @PollingArpWaitTable(i32*) #1

declare dso_local i32 @PollingIpWaitTable(i32*) #1

declare dso_local i32 @PollingIpCombine(i32*) #1

declare dso_local i32 @PollingBeacon(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
